--- a/app/Admin/pages/admin.html
+++ b/app/Admin/pages/admin.html
@@ -244,7 +244,7 @@
                             <a href="tables.html"><i class="fa fa-table fa-fw"></i> Cours</a>
                         </li>
                         <li>
-                            <a ui-sref="admin.students"><i class="fa fa-table fa-fw"></i> Étudiants</a>
+                            <a ui-sref="admin.students"><i class="fa fa-table fa-fw"></i> Élèves</a>
                         </li>
                         <li>
                             <a ui-sref="admin.enseignants"><i class="fa fa-table fa-fw"></i> Enseignants</a>
