--- a/app/Admin/pages/eleves/eleves.html
+++ b/app/Admin/pages/eleves/eleves.html
@@ -1,7 +1,7 @@
 <div id="page-wrapper" ng-controller="ElevesController">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Tables</h1>
+            <h1 class="page-header">Élèves</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -10,26 +10,72 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Étudiants
+                    Élèves
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
+                    <div>
+
+                        <div class="col-lg-6 pull-right" style="margin-bottom: 10px">
+                            <div class="input-group">
+                                <input ng-show="!searchLabel" type="text" class="form-control" aria-label="..." ng-model="searchBox.Nom">
+
+                                <input ng-if="searchLabel === 'Nom'" type="text" class="form-control" aria-label="..." ng-model="searchBox.Nom">
+                                <input ng-if="searchLabel === 'Prenom'" type="text" class="form-control" aria-label="..." ng-model="searchBox.Prenom">
+                                <input ng-if="searchLabel === 'username'" type="text" class="form-control" aria-label="..." ng-model="searchBox.username">
+                                <input ng-if="searchLabel === 'email'" type="text" class="form-control" aria-label="..." ng-model="searchBox.email">
+
+                                <div class="input-group-btn">
+                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                                            aria-haspopup="true" aria-expanded="false">{{searchLabel || 'Nom' }}  <span class="caret"></span></button>
+                                    <ul class="dropdown-menu dropdown-menu-right">
+                                        <li><a href="" ng-click="searchLabel = 'Nom'; searchBox={}">Nom</a></li>
+                                        <li><a href="" ng-click="searchLabel = 'Prenom'; searchBox={}">Prenom</a></li>
+                                        <li><a href="" ng-click="searchLabel = 'username'; searchBox={}">username</a></li>
+                                        <li><a href="" ng-click="searchLabel = 'email'; searchBox={}">email</a></li>
+                                    </ul>
+                                </div><!-- /btn-group -->
+                            </div><!-- /input-group -->
+                        </div><!-- /.col-lg-6 -->
+                    </div><!-- /.row -->
+
+
                     <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                         <thead>
                             <tr class="">
                                 <th></th>
-                                <th>Nom</th>
-                                <th>Prenom</th>
-                                <th class="hidden-sm hidden-xs">username</th>
-                                <th class="hidden-md hidden-sm hidden-xs">Mail</th>
-                                <th class="hidden-sm hidden-xs">Groupes</th>
-                                <th class="hidden-sm hidden-xs">Cours</th>
+                                <th>Nom <a ng-show="!nomup" href="" ng-click="myOrderBy='Nom'; nomup=true">
+                                    <span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                                    <a ng-show="nomup" href="" ng-click="myOrderBy='-Nom'; nomup=false">
+                                    <span class="glyphicon glyphicon-triangle-top"></span>
+                                    </a>
+                                </th>
+                                <th>Prenom <a ng-show="!prenomup" href="" ng-click="myOrderBy='Prenom'; prenomup=true">
+                                    <span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                                    <a ng-show="prenomup" href="" ng-click="myOrderBy='-Prenom'; prenomup=false">
+                                        <span class="glyphicon glyphicon-triangle-top"></span>
+                                    </a>
+                                </th>
+                                <th class="hidden-sm hidden-xs">username
+                                    <a ng-show="!usernameup" href="" ng-click="myOrderBy='username'; usernameup=true">
+                                        <span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                                    <a ng-show="usernameup" href="" ng-click="myOrderBy='-username'; usernameup=false">
+                                        <span class="glyphicon glyphicon-triangle-top"></span>
+                                    </a></th>
+                                <th class="hidden-md hidden-sm hidden-xs">Mail
+                                    <a ng-show="!emailup" href="" ng-click="myOrderBy='email'; emailup=true">
+                                        <span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                                    <a ng-show="emailup" href="" ng-click="myOrderBy='-email'; emailup=false">
+                                        <span class="glyphicon glyphicon-triangle-top"></span>
+                                    </a></th>
+                                <th class="hidden-sm hidden-xs">Groupes </th>
+                                <th class="hidden-sm hidden-xs">Cours </th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
                         <tbody>
 
-                        <tr class="infos" ng-repeat-start="eleve in ElevesList | orderBy:'Nom'" ng-class-odd="'odd'" ng-class-even="'even'">
+                        <tr class="infos" ng-repeat-start="eleve in ElevesList | filter:searchBox | orderBy:myOrderBy" ng-class-odd="'odd'" ng-class-even="'even'">
                             <td>
                                 <button ng-if="eleve.expanded" ng-click="eleve.expanded = false">&Hat;</button>
                                 <button ng-if="!eleve.expanded" ng-click="eleve.expanded = true">+</button>
@@ -46,7 +92,7 @@
                                         <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                                        <li ng-repeat="g in eleve.Groupes"><a href="#">{{g}}</a></li>
+                                        <li ng-repeat="g in eleve.Groupes"><a href="">{{g}}</a></li>
                                     </ul>
                                 </div>
                             </td>
@@ -58,7 +104,7 @@
                                         <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu2">
-                                        <li ng-repeat="c in eleve.cours"><a href="#">{{c}}</a></li>
+                                        <li ng-repeat="c in eleve.cours"><a href="">{{c}}</a></li>
                                     </ul>
                                 </div>
                             </td>
@@ -72,18 +118,34 @@
                         <tr ng-if="eleve.expanded" ng-repeat-end="">
                             <td></td>
                             <td colspan="99">
-                                <ul class="">
-                                    <li class="hidden-xl hidden-lg hidden-md"><a href="#">username: {{eleve.username}}</a></li>
-                                    <li class="hidden-xl hidden-lg"><a href="#">email: {{eleve.email}}</a></li>
-                                    <li class=""><a href="#">eleve_id: {{eleve.eleves_id}}</a></li>
-                                    <li class=""><a href="#">user_id: {{eleve.user_id}}</a></li>
-                                </ul>
+                                    <p class="hidden-xl hidden-lg hidden-md"><a href="">username: {{eleve.username}}</a></p>
+                                    <p class="hidden-xl hidden-lg"><a href="">email: {{eleve.email}}</a></p>
+                                    <p class=""><a href="">eleve_id: {{eleve.eleves_id}}</a></p>
+                                    <p class=""><a href="">user_id: {{eleve.user_id}}</a></p>
+
                             </td>
                         </tr>
 
 
                         </tbody>
                     </table>
+
+
+                    <nav aria-label="...">
+                        <ul class="pagination">
+                            <li class="disabled"><a href="" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                            <li class="active"><a href="">1 <span class="sr-only">(current)</span></a></li>
+                            <li><a href="">2</a></li>
+                            <li><a href="">3</a></li>
+                            <li><a href="">4</a></li>
+                            <li><a href="">5</a></li>
+                            <li>
+                                <a href="" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
                     <!-- /.table-responsive -->
                     <button class="btn btn-primary pull-right" ng-click="add()">Ajouter un étudiant</button>
                 </div>
@@ -95,4 +157,4 @@
     </div>
     <!-- /.row -->
 </div>
-<!-- /#page-wrapper -->
+<!-- /.page-wrapper -->
