--- a/app/Admin/pages/eleves/eleves_add.html
+++ b/app/Admin/pages/eleves/eleves_add.html
@@ -11,27 +11,27 @@
             <div class="form-group">
                 <label for="nom" class="col-sm-2 control-label">Nom</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.Nom" class="form-control" id="nom" placeholder="Nom"/>
+                    <input type="text" ng-model="newEleve.Nom" class="form-control" id="nom" placeholder="Nom"/>
                 </div>
             </div>
             <div class="form-group">
                 <label for="prenom" class="col-sm-2 control-label">Prenom</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.Prenom" class="form-control" id="prenom" placeholder="Prenom"/>
+                    <input type="text" ng-model="newEleve.Prenom" class="form-control" id="prenom" placeholder="Prenom"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="email" class="col-sm-2 control-label">Adresse Mail</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.email" class="form-control" id="email" placeholder="email"/>
+                    <input type="text" ng-model="newEleve.email" class="form-control" id="email" placeholder="email"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="username" class="col-sm-2 control-label">Username</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.username" class="form-control" id="username" placeholder="username"/>
+                    <input type="text" ng-model="newEleve.username" class="form-control" id="username" placeholder="username"/>
                 </div>
             </div>
 
