--- a/app/Admin/pages/eleves/eleves.html
+++ b/app/Admin/pages/eleves/eleves.html
@@ -154,7 +154,7 @@
                         </ul>
                     </nav>
                     <!-- /.table-responsive -->
-                    <button class="btn btn-primary pull-right" ng-click="add()">Ajouter un étudiant</button>
+                    <button class="btn btn-primary pull-right" ng-click="goToAdd()">Ajouter un étudiant</button>
                 </div>
                 <!-- /.panel-body -->
             </div>
