--- a/app/Admin/pages/admin.html
+++ b/app/Admin/pages/admin.html
@@ -241,7 +241,7 @@
                             <a ui-sref="admin"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
-                            <a href="tables.html"><i class="fa fa-table fa-fw"></i> Cours</a>
+                            <a ui-sref="admin.cours"><i class="fa fa-table fa-fw"></i> Cours</a>
                         </li>
                         <li>
                             <a ui-sref="admin.students"><i class="fa fa-table fa-fw"></i> Élèves</a>
