--- a/app/Admin/pages/enseignants/enseignants.html
+++ b/app/Admin/pages/enseignants/enseignants.html
@@ -1,7 +1,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Tables</h1>
+            <h1 class="page-header">Enseignants</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
