--- a/app/Admin/pages/cours/cours.html
+++ b/app/Admin/pages/cours/cours.html
@@ -1,7 +1,7 @@
-<div id="page-wrapper">
+<div id="page-wrapper" >
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Tables</h1>
+            <h1 class="page-header">Cours</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -14,212 +14,124 @@
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
+                    <div>
+
+                        <div class="col-lg-6 pull-right" style="margin-bottom: 10px">
+                            <div class="input-group">
+                                <input ng-show="!searchLabel" type="text" class="form-control" aria-label="..." ng-model="searchBox.intitule">
+
+                                <input ng-if="searchLabel === 'intitule'" type="text" class="form-control" aria-label="..." ng-model="searchBox.intitule">
+                                <input ng-if="searchLabel === 'section'" type="text" class="form-control" aria-label="..." ng-model="searchBox.section">
+                                <input ng-if="searchLabel === 'reference'" type="text" class="form-control" aria-label="..." ng-model="searchBox.reference">
+                                <input ng-if="searchLabel === 'description'" type="text" class="form-control" aria-label="..." ng-model="searchBox.description">
+
+                                <input ng-if="searchLabel === 'enseignants'" type="text" class="form-control" aria-label="..." ng-model="searchBox.enseignants">
+
+
+                                <div class="input-group-btn">
+                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                                            aria-haspopup="true" aria-expanded="false">{{searchLabel || 'Intitulé' }}  <span class="caret"></span></button>
+                                    <ul class="dropdown-menu dropdown-menu-right">
+                                        <li><a href="" ng-click="searchLabel = 'intitule'; searchBox={}">Intitulé</a></li>
+                                        <li><a href="" ng-click="searchLabel = 'section'; searchBox={}">Section</a></li>
+                                        <li><a href="" ng-click="searchLabel = 'reference'; searchBox={}">Référence</a></li>
+                                        <li><a href="" ng-click="searchLabel = 'description'; searchBox={}">Déscription</a></li>
+                                        <li><a href="" ng-click="searchLabel = 'enseignants'; searchBox={}">Enseignants</a></li>
+                                    </ul>
+                                </div><!-- /btn-group -->
+                            </div><!-- /input-group -->
+                        </div><!-- /.col-lg-6 -->
+                    </div><!-- /.row -->
+
+
                     <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                         <thead>
-                        <tr>
-                            <th>Rendering engine</th>
-                            <th>Browser</th>
-                            <th>Platform(s)</th>
-                            <th>Engine version</th>
-                            <th>CSS grade</th>
+                        <tr class="">
+                            <th></th>
+                            <th>Intitulé <a ng-show="!intituleup" href="" ng-click="myOrderBy='intitule'; intituleup=true">
+                                <span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                                <a ng-show="intituleup" href="" ng-click="myOrderBy='-intitule'; intituleup=false">
+                                    <span class="glyphicon glyphicon-triangle-top"></span>
+                                </a>
+                            </th>
+                            <th>Section <a ng-show="!sectionup" href="" ng-click="myOrderBy='section'; sectionup=true">
+                                <span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                                <a ng-show="sectionup" href="" ng-click="myOrderBy='-section'; sectionup=false">
+                                    <span class="glyphicon glyphicon-triangle-top"></span>
+                                </a>
+                            </th>
+                            <th class="hidden-sm hidden-xs">Référence
+                                <a ng-show="!referenceup" href="" ng-click="myOrderBy='reference'; referenceup=true">
+                                    <span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                                <a ng-show="referenceup" href="" ng-click="myOrderBy='-reference'; referenceup=false">
+                                    <span class="glyphicon glyphicon-triangle-top"></span>
+                                </a></th>
+                            <th class="hidden-sm hidden-xs">Enseignants </th>
+                            <th>Actions</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr class="odd gradeX">
-                            <td>Trident</td>
-                            <td>Internet Explorer 4.0</td>
-                            <td>Win 95+</td>
-                            <td class="center">4</td>
-                            <td class="center">X</td>
-                        </tr>
-                        <tr class="even gradeC">
-                            <td>Trident</td>
-                            <td>Internet Explorer 5.0</td>
-                            <td>Win 95+</td>
-                            <td class="center">5</td>
-                            <td class="center">C</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Gecko</td>
-                            <td>Netscape Browser 8</td>
-                            <td>Win 98SE+</td>
-                            <td class="center">1.7</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Gecko</td>
-                            <td>Netscape Navigator 9</td>
-                            <td>Win 98+ / OSX.2+</td>
-                            <td class="center">1.8</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Gecko</td>
-                            <td>Mozilla 1.0</td>
-                            <td>Win 95+ / OSX.1+</td>
-                            <td class="center">1</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Gecko</td>
-                            <td>Mozilla 1.1</td>
-                            <td>Win 95+ / OSX.1+</td>
-                            <td class="center">1.1</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Gecko</td>
-                            <td>Mozilla 1.2</td>
-                            <td>Win 95+ / OSX.1+</td>
-                            <td class="center">1.2</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Gecko</td>
-                            <td>Mozilla 1.3</td>
-                            <td>Win 95+ / OSX.1+</td>
-                            <td class="center">1.3</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Gecko</td>
-                            <td>Mozilla 1.4</td>
-                            <td>Win 95+ / OSX.1+</td>
-                            <td class="center">1.4</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Gecko</td>
-                            <td>Mozilla 1.5</td>
-                            <td>Win 95+ / OSX.1+</td>
-                            <td class="center">1.5</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Gecko</td>
-                            <td>Mozilla 1.6</td>
-                            <td>Win 95+ / OSX.1+</td>
-                            <td class="center">1.6</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Gecko</td>
-                            <td>Mozilla 1.7</td>
-                            <td>Win 98+ / OSX.1+</td>
-                            <td class="center">1.7</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Gecko</td>
-                            <td>Mozilla 1.8</td>
-                            <td>Win 98+ / OSX.1+</td>
-                            <td class="center">1.8</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Gecko</td>
-                            <td>Seamonkey 1.1</td>
-                            <td>Win 98+ / OSX.2+</td>
-                            <td class="center">1.8</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Gecko</td>
-                            <td>Epiphany 2.20</td>
-                            <td>Gnome</td>
-                            <td class="center">1.8</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Webkit</td>
-                            <td>Safari 1.2</td>
-                            <td>OSX.3</td>
-                            <td class="center">125.5</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Webkit</td>
-                            <td>Safari 1.3</td>
-                            <td>OSX.3</td>
-                            <td class="center">312.8</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Webkit</td>
-                            <td>Safari 2.0</td>
-                            <td>OSX.4+</td>
-                            <td class="center">419.3</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Webkit</td>
-                            <td>Safari 3.0</td>
-                            <td>OSX.4+</td>
-                            <td class="center">522.1</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Webkit</td>
-                            <td>OmniWeb 5.5</td>
-                            <td>OSX.4+</td>
-                            <td class="center">420</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Webkit</td>
-                            <td>iPod Touch / iPhone</td>
-                            <td>iPod</td>
-                            <td class="center">420.1</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Webkit</td>
-                            <td>S60</td>
-                            <td>S60</td>
-                            <td class="center">413</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Presto</td>
-                            <td>Opera 7.0</td>
-                            <td>Win 95+ / OSX.1+</td>
-                            <td class="center">-</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Presto</td>
-                            <td>Opera 7.5</td>
-                            <td>Win 95+ / OSX.2+</td>
-                            <td class="center">-</td>
-                            <td class="center">A</td>
-                        </tr>
-                        <tr class="gradeA">
-                            <td>Presto</td>
-                            <td>Opera 8.0</td>
-                            <td>Win 95+ / OSX.2+</td>
-                            <td class="center">-</td>
-                            <td class="center">A</td>
-                        </tr>
 
-                        <tr class="gradeA">
-                            <td>Noemie</td>
-                            <td>NetFront 3.1</td>
-                            <td>Embedded devices</td>
-                            <td class="center">-</td>
-                            <td class="center">
-                                <button type="button" class="btn btn-success btn-circle"><i class="fa fa-plus"></i>
+                        <tr class="infos" ng-repeat-start="cours in coursList | filter:searchBox | orderBy:myOrderBy" ng-class-odd="'odd'" ng-class-even="'even'">
+                            <td>
+                                <button ng-if="cours.expanded" ng-click="cours.expanded = false">&Hat;</button>
+                                <button ng-if="!cours.expanded" ng-click="cours.expanded = true">+</button>
+                            </td>
+
+                            <td>{{cours.intitule}}</td>
+                            <td class="hidden-sm hidden-xs">{{cours.section}}</td>
+                            <td class="hidden-sm hidden-xs">{{cours.refernece}}</td>
+                            <td>
+                                <div class="dropdown">
+                                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                        <span class="hidden-md hidden-lg">Liste des enseignants</span>
+                                        <span class="hidden-xl">Liste</span>
+                                        <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                                        <li ng-repeat="e in cours.enseignants track by $index"><a href="">{{e}}</a></li>
+                                    </ul>
+                                </div>
+                            </td>
+                            <td>
+                                <button type="button" class="btn btn-primary btn-circle-micro"><i class="fa fa-list"></i>
                                 </button>
-                                <button type="button" class="btn btn-primary btn-circle"><i class="fa fa-list"></i>
-                                </button>
-                                <button type="button" class="btn btn-danger btn-circle"><i class="fa fa-times"></i>
+                                <button type="button" class="btn btn-danger btn-circle-micro"><i class="fa fa-times"></i>
                                 </button>
                             </td>
                         </tr>
+                        <tr ng-if="eleve.expanded" ng-repeat-end="">
+                            <td></td>
+                            <td colspan="99">
+                                <p class=""><a href="">description: {{cours.description}}</a></p>
+                                <p class="hidden-xl hidden-lg hidden-md"><a href="">Section: {{cours.section}}</a></p>
+                                <p class="hidden-xl hidden-lg hidden-md"><a href="">Référence: {{cours.reference}}</a></p>
+
+                            </td>
+                        </tr>
+
 
                         </tbody>
                     </table>
-                    <!-- /.table-responsive -->
 
+
+                    <nav aria-label="...">
+                        <ul class="pagination">
+                            <li class="disabled"><a href="" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                            <li class="active"><a href="">1 <span class="sr-only">(current)</span></a></li>
+                            <li><a href="">2</a></li>
+                            <li><a href="">3</a></li>
+                            <li><a href="">4</a></li>
+                            <li><a href="">5</a></li>
+                            <li>
+                                <a href="" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <!-- /.table-responsive -->
+                    <button class="btn btn-primary pull-right" ng-click="goToAdd()">Ajouter un étudiant</button>
                 </div>
                 <!-- /.panel-body -->
             </div>
